# stock-market-tool

./: .env  .gitignore  CMakeLists.txt  docker-compose.yaml  main.cpp  smt_stack.drawio
inc/modules/utils/statistics/: MovingAverage.h
include/modules/downloader/: Downloader.h
include/modules/eoddataapi/: EODDataAPI.h
include/modules/yfinance/: yfinance.h
resource/yfinance/: cfg.yaml
scripts/: run-all.sh
src/: CMakeLists.txt
src/modules/downloader/: CMakeLists.txt  Downloader.cpp
src/modules/eodddataapi/: CMakeLists.txt  EODDataAPI.cpp
src/modules/utils/: CMakeLists.txt
src/modules/utils/statistics/: CMakeLists.txt  MovingAverage.cpp
src/modules/yfinance/: CMakeLists.txt  yfinance.cpp
test/: CMakeLists.txt  MovingAverageTest.cpp
